# SwapInPlace

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: array_util.hpp
src/: main.cpp
test/src/: test.cpp
